# elasticode

./: .dockerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Dockerfile  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
docs/: development.md  resource-reference.md
src/elasticode/: __init__.py  applier.py  cli.py  client.py  config.py  differ.py  errors.py  exporter.py  loader.py  output.py  planner.py  scaffold.py  types.py
src/elasticode/resources/: __init__.py  base.py  component_template.py  ilm_policy.py  index.py  index_template.py  ingest_pipeline.py
tests/: conftest.py  test_applier.py  test_cli.py  test_config.py  test_differ.py  test_exporter.py  test_loader.py  test_output.py  test_planner.py  test_scaffold.py
tests/fixtures/: clusters.yaml  clusters_env_vars.yaml  clusters_invalid.yaml
tests/fixtures/component_templates/: base-mappings.json
tests/fixtures/ilm_policies/: logs-policy.json
tests/fixtures/index_templates/: logs-template.json
tests/fixtures/ingest_pipelines/: parse-logs.json
tests/resources/: test_component_template.py  test_ilm_policy.py  test_index.py  test_index_template.py  test_ingest_pipeline.py
