[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elasticode"
version = "0.1.0"
description = "Declaratively manage Elasticsearch 8.x resources with a Terraform-like workflow"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Ravid Rom", email = "romravid@gmail.com" }]
keywords = ["elasticsearch", "infrastructure", "declarative", "IaC"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1,<9",
    "elasticsearch>=8.12,<9",
    "pyyaml>=6.0,<7",
    "deepdiff>=8.0,<9",
    "rich>=13.0,<14",
]

[project.scripts]
elasticode = "elasticode.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "mypy>=1.13",
    "ruff>=0.8",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/elasticode"]

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF", "PTH"]

[tool.ruff.lint.isort]
known-first-party = ["elasticode"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_reexport = true
mypy_path = "src"

# Type check tests as well
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false  # Tests can be less strict

[[tool.mypy.overrides]]
module = "deepdiff.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-markers", "--strict-config", "-ra"]
markers = ["integration: marks tests requiring a live Elasticsearch cluster"]
