[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elasticode"
version = "0.1.0"
description = "Declaratively manage Elasticsearch 8.x resources with a Terraform-like workflow"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Ravid Rom", email = "romravid@gmail.com" }]
keywords = ["elasticsearch", "infrastructure", "declarative", "IaC"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1,<9",
    "elasticsearch>=8.12,<9",
    "pyyaml>=6.0,<7",
    "deepdiff>=8.0,<9",
    "rich>=13.0,<14",
]

[project.scripts]
elasticode = "elasticode.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "pytest-mock>=3.14",
    "mypy>=1.13",
    "ruff>=0.8",
    "types-PyYAML>=6.0",
    "bump-my-version>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/elasticode"]

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
    "FAST", # FastAPI
    "PIE",  # flake8-pie
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "BLE",  # flake8-blind-except
    "A",    # flake8-builtins
    "COM",  # flake8-commas
    "DTZ",  # flake8-datetimez
    "FA",   # flake8-future-annotations
    "T20",  # flake8-print
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLOT", # flake8-slots
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "FLY",  # flynt
    "PGH",  # pygrep-hooks
    "FURB", # refurb
]

ignore = [
    "S101", # assert - We like asserts, they can be very concise

    # We don't care about cybersecurity
    "S104", # hardcoded-bind-all-interfaces
    "S603", # subprocess-without-shell-equals-true
    "S607", # start-process-with-partial-path

    # Formatter conflicting rules
    "COM812", # missing-trailing-comma
]

[tool.ruff.lint.per-file-ignores]
# Blind exception catch is intentional during apply operations
"src/elasticode/applier.py" = ["BLE001"]

# Any types are necessary for YAML parsing (untyped input)
"src/elasticode/config.py" = ["ANN401"]

# Test files can have hardcoded passwords and unused fixtures
"tests/*" = ["S105", "S106", "ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["elasticode"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_reexport = true
mypy_path = "src"

# Type check tests as well
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false # Tests can be less strict

[[tool.mypy.overrides]]
module = "deepdiff.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["--strict-markers", "--strict-config", "-ra"]
markers = ["integration: marks tests requiring a live Elasticsearch cluster"]

[tool.bumpversion]
current_version = "0.1.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
ignore_missing_files = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Bump version: {current_version} → {new_version}"
allow_dirty = false
commit = true
message = "Bump version: {current_version} → {new_version}"
commit_args = ""

[[tool.bumpversion.files]]
filename = "src/elasticode/__init__.py"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"
